--- a/public/cms/cms.css
+++ b/public/cms/cms.css
@@ -164,3 +164,278 @@ div#cms_user td input {
     background: #ededed;
     display: none;
 }
+
+/**
+    CMS NAVIGATION
+*/
+
+#cms_nav {
+    float: left;
+    overflow:auto;
+}
+
+#cms_nav_edit {
+    float: left; width: 500px;
+    margin-left: 20px;
+    padding-left: 20px;
+    border-left: solid 1px #eee;
+    font-size: 13px;
+    font-weight: normal;
+}
+#cms_nav_edit input, #cms_nav_edit textarea {
+    padding: 3px;
+    width: 380px;
+}
+
+#cms_nav_edit td {
+    padding: 2px 5px;
+}
+
+#cms_nav_edit hr {
+  margin: 20px 0 19px;
+  border: 0;
+  border-bottom: 1px solid #eee;
+}
+
+.cms_bloc {
+    display: none;
+}
+
+.cms_bloc.active {
+    display: block;
+}
+
+#cms-nav-result{
+    float: left;
+    margin-left: 40px;
+}
+
+.cms_overlaybox {
+    display:none;
+    width:800px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background-color: white;
+    border: 1px solid #999;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding-box;
+    background-clip: padding-box;
+}
+
+.cms_overlaybox-header {
+
+    border-bottom: 1px solid #EEE;
+    padding: 5px 15px;
+}
+.cms_overlaybox-header h2 {
+    font-weight: bold;
+    color: #404040;
+    margin: 0;padding: 0;
+}
+
+.cms_overlaybox-header .close {
+    margin-top: 7px;
+    float: right;
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 13.5px;
+    text-shadow: 0 1px 0 white;
+    filter: alpha(opacity=20);
+    -khtml-opacity: 0.2;
+    -moz-opacity: 0.2;
+    opacity: 0.2;
+    text-decoration: none;
+}
+
+.cms_overlaybox-body {
+    padding: 15px;
+    color: #000;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.cms_overlaybox-footer {
+
+    background-color: whiteSmoke;
+    padding: 14px 15px 15px;
+    border-top: 1px solid #DDD;
+    -webkit-border-radius: 0 0 6px 6px;
+    -moz-border-radius: 0 0 6px 6px;
+    border-radius: 0 0 6px 6px;
+    -webkit-box-shadow: inset 0 1px 0 #ffffff;
+    -moz-box-shadow: inset 0 1px 0 #ffffff;
+    box-shadow: inset 0 1px 0 #ffffff;
+    zoom: 1;
+    margin-bottom: 0;
+}
+
+.cms_overlaybox-footer button{
+    float: right;
+    cursor: pointer;
+    display: inline-block;
+    background-color: #E6E6E6;
+    background-repeat: no-repeat;
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), color-stop(25%, #ffffff), to(#e6e6e6));
+    background-image: -webkit-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
+    background-image: -moz-linear-gradient(top, #ffffff, #ffffff 25%, #e6e6e6);
+    background-image: -ms-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
+    background-image: -o-linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
+    background-image: linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);
+    padding: 5px 14px 6px;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+    color: #333;
+    font-size: 11px;
+    line-height: normal;
+    border: 1px solid #CCC;
+    border-bottom-color: #BBB;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    -webkit-transition: 0.1s linear all;
+    -moz-transition: 0.1s linear all;
+    -ms-transition: 0.1s linear all;
+    -o-transition: 0.1s linear all;
+    transition: 0.1s linear all;
+}
+
+.cms_overlaybox-footer::before, .cms_overlaybox-footer::after {
+    display: table;
+    content: "";
+    zoom: 1;
+}
+.cms_overlaybox-footer::after {clear: both;}
+
+.cms_overlaybox-footer .label {
+    padding: 1px 3px 2px;
+    background-color: #BFBFBF;
+    font-size: 9.75px;
+    font-weight: bold;
+    color: white;
+    text-transform: uppercase;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    margin-top: 8px;
+}
+
+.cms_overlaybox-footer .label.success {
+    background-color: #46A546;
+}
+
+.cms_overlaybox-footer .label.important {
+    background-color: #C43C35;
+}
+
+.cms_tabs, .cms_pills {
+  margin: 0 0 20px;
+  padding: 0;
+  list-style: none;
+  zoom: 1;
+}
+.cms_tabs:before,
+.cms_pills:before,
+.cms_tabs:after,
+.cms_pills:after {
+  display: table;
+  content: "";
+  zoom: 1;
+  *display: inline;
+}
+.cms_tabs:after, .cms_pills:after {
+  clear: both;
+}
+.cms_tabs > li, .cms_pills > li {
+  float: left;
+}
+.cms_tabs > li > a, .cms_pills > li > a {
+  display: block;
+  text-decoration: none;
+}
+.cms_tabs {
+  float: left;
+  width: 100%;
+  border-bottom: 1px solid #ddd;
+}
+.cms_tabs > li {
+  position: relative;
+  top: 1px;
+}
+.cms_tabs > li > a {
+  padding: 0 15px;
+  margin-right: 2px;
+  line-height: 36px;
+  border: 1px solid transparent;
+  -webkit-border-radius: 4px 4px 0 0;
+  -moz-border-radius: 4px 4px 0 0;
+  border-radius: 4px 4px 0 0;
+}
+.cms_tabs > li > a:hover {
+  text-decoration: none;
+  background-color: #eee;
+  border-color: #eee #eee #ddd;
+}
+.cms_tabs > li.active > a {
+  color: #808080;
+  background-color: #ffffff;
+  border: 1px solid #ddd;
+  border-bottom-color: transparent;
+}
+.cms_tabs .menu-dropdown, .cms_tabs .dropdown-menu {
+  top: 35px;
+  border-width: 1px;
+  -webkit-border-radius: 0 6px 6px 6px;
+  -moz-border-radius: 0 6px 6px 6px;
+  border-radius: 0 6px 6px 6px;
+}
+.cms_tabs a.menu:after, .cms_tabs .dropdown-toggle:after {
+  border-top-color: #999;
+  margin-top: 15px;
+  margin-left: 5px;
+}
+.cms_tabs li.open.menu .menu, .cms_tabs .open.dropdown .dropdown-toggle {
+  border-color: #999;
+}
+.cms_tabs li.open a.menu:after, .cms_tabs .dropdown.open .dropdown-toggle:after {
+  border-top-color: #555;
+}
+.cms_tab-content {
+  clear: both;
+}
+.cms_tab-content, .cms_pill-content {
+  display: none;
+}
+
+.cms_tab-content.active, .cms_pill-content.active {
+    display: block;
+}
+
+.cms_pills a {
+  margin: 5px 3px 5px 0;
+  padding: 0 15px;
+  text-shadow: 0 1px 1px #ffffff;
+  line-height: 30px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+}
+.cms_pills a:hover {
+  background: lightblue;
+  color: #ffffff;
+  text-decoration: none;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+}
+.cms_pills .active a {
+  background: #0069d6;
+  color: #ffffff;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+}
