--- a/public/cms/cms.css
+++ b/public/cms/cms.css
@@ -174,6 +174,11 @@ div#cms_user td input {
     overflow:auto;
 }
 
+#cms_nav a, #cms_nav_edit a {
+    
+    color: #000;
+}
+
 #cms_nav_edit {
     float: left; width: 500px;
     margin-left: 20px;
@@ -434,7 +439,7 @@ div#cms_user td input {
   text-decoration: none;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
 }
-.cms_pills .active a {
+.cms_pills .active a, #cms_nav_edit .cms_pills .active a {
   background: #0069d6;
   color: #ffffff;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
